<resources>
    <string name="app_name">TuneIn Demo</string>
    <string name="generic_error">Sorry, we were unable to obtain / update the tasks list.</string>
    <string name="validation_error">Invalid input: please double-check your entries.</string>
    <string name="task_name">Title: %s</string>
    <string name="task_desc">Description: %s</string>
    <string name="task_date">Due Date: %s</string>
    <string name="menu_task_add">Add Task</string>
    <string name="menu_task_sort">Sort Tasks</string>
    <string name="new_task">Add a task</string>
    <string name="new_task_title">Title</string>
    <string name="new_task_desc">Description</string>
    <string name="new_task_date">Due</string>
    <string name="new_task_btn_add">Add</string>
    <string name="new_task_btn_cancel">Cancel</string>
</resources>
