<?xml version="1.0" encoding="utf-8"?>
<!-- quick and dirty anti-performance layout... -->
<LinearLayout
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task_title"
        style="?android:listSeparatorTextViewStyle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/new_task_date"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task_date"/>


        <EditText
            android:id="@+id/new_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/new_task_date"
            android:inputType="text"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task_desc"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/new_task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textMultiLine"
        android:lines="4" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task_btn_add"
            android:id="@+id/new_task_ok"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task_btn_cancel"
            android:id="@+id/new_task_cancel"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>